# github_playground

./: .gitignore  README.md
github-features-learning/: README.md
github-features-learning/.github/: CODEOWNERS
github-features-learning/.github/workflows/: go-ci.yml  python-ci.yml
github-features-learning/go/: Makefile  README.md  go.mod
github-features-learning/go/cmd/app/: main.go
github-features-learning/go/internal/util/: util.go
github-features-learning/go/pkg/example/: example.go
github-features-learning/python/: README.md  pyproject.toml
github-features-learning/python/src/: main.py
github-features-learning/python/tests/: test_main.py
